2004-12-04  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-getpid1.
	* tst-getpid1.c: New file.
	* sysdeps/unix/sysv/linux/i386/clone.S: New file.
	* sysdeps/unix/sysv/linux/x86_64/clone.S: New file.

2004-12-01  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/bits/posix_opt.h (_POSIX_CPUTIME,
	_POSIX_THREAD_CPUTIME): Define to 0.
	* sysdeps/pthread/timer_create.c (timer_create): Remove unused code
	handling CLOCK_PROCESS_CPUTIME_ID and CLOCK_THREAD_CPUTIME_ID.
	* sysdeps/pthread/timer_routines.c (__timer_signal_thread_pclk,
	__timer_signal_thread_tclk): Remove.
	(init_module): Remove their initialization.
	(thread_cleanup): Remove their cleanup assertions.
	* sysdeps/pthread/posix-timer.h (__timer_signal_thread_pclk,
	__timer_signal_thread_tclk): Remove.
	* sysdeps/unix/sysv/linux/i386/bits/posix_opt.h: Removed.
	* sysdeps/unix/sysv/linux/ia64/bits/posix_opt.h: Removed.
	* sysdeps/unix/sysv/linux/x86_64/bits/posix_opt.h: Removed.

2004-12-02  Roland McGrath  <roland@redhat.com>

	* Makefile (libpthread-nonshared): Variable removed.
	($(objpfx)libpthread_nonshared.a): Target removed.
	($(inst_libdir)/libpthread_nonshared.a): Likewise.
	These are now handled by generic magic from
	libpthread-static-only-routines being set.

2004-11-27  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/posix_opt.h (_POSIX_PRIORITIZED_IO,
	_POSIX2_CHAR_TERM, _POSIX_THREAD_PRIO_INHERIT,
	_POSIX_THREAD_PRIO_PROTECT): Define.
	* sysdeps/unix/sysv/linux/i386/bits/posix_opt.h: Likewise.
	* sysdeps/unix/sysv/linux/ia64/bits/posix_opt.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/posix_opt.h: Likewise.

2004-11-26  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/bits/posix_opt.h (_POSIX_ADVISORY_INFO,
	_POSIX_SPORADIC_SERVER, _POSIX_THREAD_SPORADIC_SERVER, _POSIX_TRACE,
	_POSIX_TRACE_EVENT_FILTER, _POSIX_TRACE_INHERIT, _POSIX_TRACE_LOG,
	_POSIX_TYPED_MEMORY_OBJECTS, _POSIX_IPV6, _POSIX_RAW_SOCKETS): Define.