@@ -241,7 +241,7 @@ tests = tst-attr1 tst-attr2 tst-attr3 \
 	tst-backtrace1 \
 	tst-oddstacklimit \
 	tst-vfork1 tst-vfork2 tst-vfork1x tst-vfork2x \
-	tst-getpid1
+	tst-getpid1 tst-getpid2
 xtests = tst-setuid1 tst-setuid1-static
 
 # Files which must not be linked with libpthread.
