@@ -2,5 +2,6 @@
 #include <tls.h>
 
 PID			offsetof (struct pthread, pid) - sizeof (struct pthread)
+TID			offsetof (struct pthread, tid) - sizeof (struct pthread)
 MULTIPLE_THREADS_OFFSET offsetof (struct pthread, header.multiple_threads) - sizeof (struct pthread)
 SYSINFO_OFFSET		offsetof (tcbhead_t, private)
