@@ -1,0 +1,2 @@
+#define RESET_PID
+#include <sysdeps/unix/sysv/linux/ia64/clone2.S>
