@@ -5,6 +5,10 @@
 #include <sys/types.h>
 #include <sys/wait.h>
 
+#ifndef TEST_CLONE_FLAGS
+#define TEST_CLONE_FLAGS 0
+#endif
+
 static int sig;
 
 static int
@@ -35,8 +39,15 @@ do_test (void)
       return 1;
     }
 
+#ifdef __ia64__
+  extern int __clone2 (int (*__fn) (void *__arg), void *__child_stack_base,
+                       size_t __child_stack_size, int __flags, void *__arg);
+  char st[256 * 1024];
+  pid_t p = __clone2 (f, st, sizeof (st), TEST_CLONE_FLAGS, 0);
+#else
   char st[128 * 1024];
-  pid_t p = clone (f, st + sizeof (st), 0, 0);
+  pid_t p = clone (f, st + sizeof (st), TEST_CLONE_FLAGS, 0);
+#endif
   if (p == -1)
     {
       printf("clone failed: %m\n");
